/*
 * Copyright 2025 PixelsDB.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 *
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND.
 */

syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = false;
option java_package = "io.pixelsdb.pixels.daemon";
option java_outer_classname = "NodeProto";

package node.proto;

// The node management services definition.
service NodeService {
  rpc GetRetinaList(google.protobuf.Empty) returns (GetRetinaListResponse);
  rpc GetRetinaByBucket(GetRetinaByBucketRequest) returns (GetRetinaByBucketResponse);
}

enum NodeRole {
  COORDINATOR = 0;
  WORKER = 1;
  RETINA = 2;
}

message NodeInfo {
  string address = 1;
  uint32 port = 2;
  NodeRole role = 3;
}

message GetRetinaListResponse {
  int32 errorCode = 1;
  repeated NodeInfo nodes = 2;
}

message GetRetinaByBucketRequest {
  int32 bucket = 1;
}

message GetRetinaByBucketResponse {
  int32 errorCode = 1;
  NodeInfo node = 2;
}
